# veil-badge

./: .gitignore  README.md  index.html  package.json
.github/workflows/: build-deploy.yml  deploy.yml
assets/: bitcoin-vendor-GUW4GuwG.js  bitcoin-vendor-GUW4GuwG.js.map  charms-BvNtxTE9.js  charms-BvNtxTE9.js.map  charms_lib-DC2Hh_uI.js  charms_lib-DC2Hh_uI.js.map  index-CQ9B3B--.js  index-CQ9B3B--.js.map  index-D16moF1j.css  react-vendor-pRRzawSB.js  react-vendor-pRRzawSB.js.map  vendor-DaCOpwfI.js  vendor-DaCOpwfI.js.map
charms/: veil.wasm
charms-app/: .gitignore  Cargo.toml  archive-wasm.sh  build-optimized.sh  quick-build.sh
charms-app/.cargo/: config.toml
charms-app/spells/: accept-proposal.yaml  mint-badge.yaml  report-outcome.yaml  transfer-badge.yaml
charms-app/src/: error.rs  lib.rs  main.rs  math.rs
charms-app/src/formulas/: backing.rs  cascade.rs  mod.rs  risk.rs  trust.rs
charms-app/src/handlers/: badge.rs  migration.rs  mod.rs  proposal.rs  transaction.rs  vouch.rs
charms-app/src/types/: action.rs  backing.rs  mod.rs  proposal.rs  serde.rs  transitions.rs
charms-app/src/validation/: backing.rs  badge.rs  mod.rs  transaction.rs  vouch.rs
charms-app/tests/: accept_proposal_debug.rs  backing_formulas_test.rs  backing_types_test.rs  backing_validation_test.rs  cbor_test.rs  e2e_two_badges.rs  formulas_test.rs  integration_test.rs  json_to_cbor_direct_test.rs  migration_test.rs  negative_outcome_test.rs  proptest_formulas.proptest-regressions  proptest_formulas.rs  prover_exact_test.rs  prover_simulation_test.rs  pubkey_cbor_test.rs  risk_flags_test.rs  security_test.rs  serde_with_test.rs  tuple_deserialize_test.rs  types_test.rs  validation_test.rs  vouch_network_test.rs  wasm_input_test.rs  window_time_test.rs
charms-app/tests/common/: mod.rs
client/: .env.development  .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
client/public/charms/: veil.wasm
client/public/wasm/: charms_lib_bg.wasm.d.ts  veil-02e3736591af4cab.wasm  veil-59df696e64b3ab02.wasm  veil-78cd7c1a0767d2de.wasm  veil.wasm  (+1 more)
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/tests/: fixtures.ts  mocks.ts  setup.ts
scripts/: sync-wasm.mjs
wasm/: README.md  charms_lib.d.ts  charms_lib.js  charms_lib.wasm  charms_lib_bg.wasm
(+65 files in other folders)
