[package]
name = "veil"
version = "0.1.0"
edition = "2021"
description = "Anonymous reputation badges on Bitcoin using Charms Protocol"
license = "MIT"
repository = "https://github.com/goingtravelin/veil-badge"

[features]
default = ["with-signatures"]
with-signatures = ["secp256k1"]
validator = ["dep:serde_json", "dep:ciborium", "dep:serde_yaml"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_with = { version = "3.0", default-features = false, features = ["hex", "alloc", "macros"] }

# REMOVED: thiserror (causes WASI imports)
# CHANGED: Removed "display" feature from derive_more
derive_more = { version = "2.0", default-features = false, features = ["deref", "from", "into", "as_ref"] }

bitflags = { version = "2.6", features = ["serde"] }
static_assertions = "1.1"

# CHANGED: Removed "std" feature - use libm for ln() instead
fixed = { version = "1.28", default-features = false }

# ADDED: no_std compatible math functions
libm = "0.2"

# Charms SDK
charms-sdk = { version = "0.10.2" }
charms-data = { version = "0.10.2" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# Crypto
sha2 = { version = "0.10", default-features = false }
# lowmemory: reduces precomputed tables from ~1.1MB to ~48KB (uses smaller ECMULT window/precision)
secp256k1 = { version = "0.29", default-features = false, features = ["alloc", "lowmemory"], optional = true }

[dev-dependencies]
serde_path_to_error = "0.1"
serde_cbor = "0.11"
serde_json = "1.0"
serde_yaml = "0.9.34"
ciborium = "0.2.2"
proptest = "1.5"
criterion = "0.5"
thiserror = "2.0"  # OK in dev-deps, only used for tests

# Also used by validator binary
[dependencies.ciborium]
version = "0.2.2"
optional = true

# Used by validator binary
[dependencies.serde_json]
version = "1.0"
optional = true

# Used by validator binary
[dependencies.serde_yaml]
version = "0.9.34"
optional = true

# Binary for local spell validation (not compiled into WASM)
[[bin]]
name = "validate_spell"
path = "src/bin/validate_spell.rs"
required-features = ["validator"]

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
panic = "abort"
codegen-units = 1

[profile.release.package."*"]
opt-level = "z"

[workspace]
